--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,8 @@
     "type_traits": "cpp",
     "tuple": "cpp",
     "typeinfo": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "map": "cpp",
+    "unordered_set": "cpp"
   }
 }
